--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Nerd Quiz</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600" rel="stylesheet">
 </head>
 
 <body>
